Setup MainWindow to use Frames in tabs for navigation

--- a/CryptoApp.Wpf/MainWindow.xaml
+++ b/CryptoApp.Wpf/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <TabControl>
+            <TabItem>
+                <TabItem.Header>Home</TabItem.Header>
+                <Frame x:Name="MainFrame" 
+                       Source="TopCurrencies/TopCurrenciesPage.xaml" />
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
