Removed main page frame source in xaml for now

--- a/CryptoApp.Wpf/MainWindow.xaml
+++ b/CryptoApp.Wpf/MainWindow.xaml
@@ -10,8 +10,7 @@
         <TabControl>
             <TabItem>
                 <TabItem.Header>Home</TabItem.Header>
-                <Frame x:Name="MainFrame" 
-                       Source="TopCurrencies/TopCurrenciesPage.xaml" />
+                <Frame x:Name="MainFrame" />
             </TabItem>
         </TabControl>
     </Grid>
