--- a/CryptoApp.Wpf/TopCurrencies/TopCurrenciesPage.xaml
+++ b/CryptoApp.Wpf/TopCurrencies/TopCurrenciesPage.xaml
@@ -5,7 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:CryptoApp.Wpf.TopCurrencies"
       mc:Ignorable="d"
-      Title="TopCurrenciesPage" Height="450" Width="800">
+      Title="TopCurrenciesPage" Height="450" Width="800"
+      Loaded="Page_Loaded">
     <Grid>
         <TextBox Text="Top 10 Currencies"></TextBox>
         <ListBox ItemsSource="{Binding CryptoCurrencies}">
