--- a/CryptoApp.Wpf/Shared/UI/CryptoSearchItem.xaml
+++ b/CryptoApp.Wpf/Shared/UI/CryptoSearchItem.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="CryptoApp.Wpf.Shared.UI.CryptoSearchItem"
+             x:Name="Control"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,7 +13,8 @@
         <valueConverters:ChangePercent24HrConverter x:Key="ChangePercent24HrConverter" />
         <valueConverters:VolumeUsd24HrConverter x:Key="VolumeUsd24HrConverter" />
     </UserControl.Resources>
-    <Grid Margin="10,0">
+    <Grid Margin="10,0" Background="CadetBlue"
+          DataContext="{Binding CryptoCurrency, ElementName=Control}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
