--- a/CryptoApp.Wpf/Shared/UI/CryptoSearchItem.xaml
+++ b/CryptoApp.Wpf/Shared/UI/CryptoSearchItem.xaml
@@ -13,6 +13,9 @@
         <valueConverters:ChangePercent24HrConverter x:Key="ChangePercent24HrConverter" />
         <valueConverters:VolumeUsd24HrConverter x:Key="VolumeUsd24HrConverter" />
         <valueConverters:PercentageToBrushConverter x:Key="PercentageToBrushConverter"/>
+        <Style TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
     </UserControl.Resources>
     <Grid Margin="10,0"
           DataContext="{Binding CryptoCurrency, ElementName=Control}">
@@ -29,25 +32,27 @@
         </Grid.ColumnDefinitions>
 
 
-        <TextBlock Grid.Column="0" Text="{Binding Rank}" FontWeight="Bold" Margin="10,0"/>
+        <TextBlock Grid.Column="0" Text="{Binding Rank}"
+                   FontWeight="Bold" Margin="10,0" FontSize="16"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Symbol}" FontWeight="Bold"/>
-        <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding Name}"/>
+        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical" Margin="10,0">
+            <TextBlock Text="{Binding Symbol}" FontWeight="Bold" FontSize="20"/>
+            <TextBlock Text="{Binding Name}" FontSize="14"/>
+        </StackPanel>
 
+        <TextBlock Grid.Column="2" Grid.Row="0"
+                   Text="{Binding PriceUsd, Converter={StaticResource PriceUsdConverter}}"
+                   Margin="0,0,10,0" FontSize="16"/>
         <TextBlock Grid.Column="3" Grid.Row="0"
-                   Text="{Binding PriceUsd, Converter={StaticResource PriceUsdConverter} }"
-                   Margin="0,0,10,0"/>
-        <TextBlock Grid.Column="4" Grid.Row="0" 
-                   Text="{Binding ChangePercent24Hr, Converter={StaticResource ChangePercent24HrConverter} }"
-                   Margin="0,0,10,0">
+                   Text="{Binding ChangePercent24Hr, Converter={StaticResource ChangePercent24HrConverter}}"
+                   Margin="0,0,10,0" FontSize="16">
             <TextBlock.Foreground>
-                <Binding Path="ChangePercent24Hr" 
+                <Binding Path="ChangePercent24Hr"
                          Converter="{StaticResource PercentageToBrushConverter}" />
             </TextBlock.Foreground>
         </TextBlock>
-        <TextBlock Grid.Column="5" Grid.Row="0" 
-                   Text="{Binding VolumeUsd24Hr, Converter={StaticResource VolumeUsd24HrConverter} }" 
-                   Margin="0,0,10,0"/>
-
+        <TextBlock Grid.Column="4" Grid.Row="0"
+                   Text="{Binding VolumeUsd24Hr, Converter={StaticResource VolumeUsd24HrConverter}}"
+                   Margin="0,0,10,0" FontSize="16"/>
     </Grid>
 </UserControl>
