--- a/CryptoApp.Wpf/Shared/UI/CryptoSearchItem.xaml
+++ b/CryptoApp.Wpf/Shared/UI/CryptoSearchItem.xaml
@@ -17,42 +17,46 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
     </UserControl.Resources>
-    <Grid Margin="10,0"
+    <Grid Margin="5,5" HorizontalAlignment="Stretch" Width="Auto"
           DataContext="{Binding CryptoCurrency, ElementName=Control}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="60"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="0.05*"/>
+            <ColumnDefinition Width="0.3*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.15*"/>
+            <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
-
 
         <TextBlock Grid.Column="0" Text="{Binding Rank}"
                    FontWeight="Bold" Margin="10,0" FontSize="16"/>
-
+            
         <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Vertical" Margin="10,0">
             <TextBlock Text="{Binding Symbol}" FontWeight="Bold" FontSize="20"/>
             <TextBlock Text="{Binding Name}" FontSize="14"/>
         </StackPanel>
-
+            
         <TextBlock Grid.Column="2" Grid.Row="0"
                    Text="{Binding PriceUsd, Converter={StaticResource PriceUsdConverter}}"
-                   Margin="0,0,10,0" FontSize="16"/>
+                   Margin="0,0,10,0" FontSize="16"
+                   HorizontalAlignment="Right"/>
+            
         <TextBlock Grid.Column="3" Grid.Row="0"
                    Text="{Binding ChangePercent24Hr, Converter={StaticResource ChangePercent24HrConverter}}"
-                   Margin="0,0,10,0" FontSize="16">
+                   Margin="0,0,10,0" FontSize="16"
+                   HorizontalAlignment="Right">
             <TextBlock.Foreground>
                 <Binding Path="ChangePercent24Hr"
                          Converter="{StaticResource PercentageToBrushConverter}" />
             </TextBlock.Foreground>
         </TextBlock>
+            
         <TextBlock Grid.Column="4" Grid.Row="0"
                    Text="{Binding VolumeUsd24Hr, Converter={StaticResource VolumeUsd24HrConverter}}"
-                   Margin="0,0,10,0" FontSize="16"/>
+                   Margin="0,0,10,0" FontSize="16"
+                   HorizontalAlignment="Right"
+        />
     </Grid>
 </UserControl>
