hardcoded navigation on top currencies page for proof of concept

--- a/CryptoApp.Wpf/TopCurrencies/TopCurrenciesPage.xaml
+++ b/CryptoApp.Wpf/TopCurrencies/TopCurrenciesPage.xaml
@@ -45,7 +45,9 @@
             HorizontalContentAlignment="Stretch">
             <ListBox.ItemTemplate>
                 <DataTemplate>
+                    <Grid MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
                     <ui:CryptoSearchItem CryptoCurrency="{Binding}" />
+                    </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
