--- a/CryptoApp.Wpf/TopCurrencies/TopCurrenciesPage.xaml
+++ b/CryptoApp.Wpf/TopCurrencies/TopCurrenciesPage.xaml
@@ -39,17 +39,10 @@
                    HorizontalAlignment="Center" VerticalAlignment="Center" />
         <TextBlock Grid.Row="1" Visibility="{Binding AppState.IsError, Converter={StaticResource VisibilityConverter}}" 
                    Text="{Binding AppState.ErrorMessage}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <ListBox Visibility="{Binding AppState.IsLoaded, Converter={StaticResource VisibilityConverter}}" 
+        <ui:CurrencyList 
             Grid.Row="1" 
-            ItemsSource="{Binding CryptoCurrencies}" 
-            HorizontalContentAlignment="Stretch">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
-                    <ui:CryptoSearchItem CryptoCurrency="{Binding}" />
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+            Visibility="{Binding AppState.IsLoaded, Converter={StaticResource VisibilityConverter}}" 
+            ItemsSource="{Binding CryptoCurrencies}"
+            SelectionCommand="{Binding NavigateToDetailsCommand}"/>
     </Grid>
 </Page>
