Added navigation ability to search currencies page, used new user control

--- a/CryptoApp.Wpf/SearchCurrencies/SearchCurrenciesPage.xaml
+++ b/CryptoApp.Wpf/SearchCurrencies/SearchCurrenciesPage.xaml
@@ -36,15 +36,10 @@
                    Visibility="{Binding AppState.IsError, Converter={StaticResource VisibilityConverter}}" 
                    Text="{Binding AppState.ErrorMessage}" 
                    HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <ListBox Visibility="{Binding AppState.IsLoaded, Converter={StaticResource VisibilityConverter}}" 
-                 Grid.Row="1" 
-                 ItemsSource="{Binding CryptoCurrencies}" 
-                 HorizontalContentAlignment="Stretch">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <ui:CryptoSearchItem CryptoCurrency="{Binding}" />
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+        <ui:CurrencyList
+            Grid.Row="1"
+            Visibility="{Binding AppState.IsLoaded, Converter={StaticResource VisibilityConverter}}"
+            ItemsSource="{Binding CryptoCurrencies}"
+            SelectionCommand="{Binding NavigateToDetailsCommand}"/>
     </Grid>
 </Page>
