--- a/CryptoApp.Wpf/CurrencyDetails/CurrencyDetailsPage.xaml
+++ b/CryptoApp.Wpf/CurrencyDetails/CurrencyDetailsPage.xaml
@@ -10,12 +10,48 @@
       <Page.Resources>
             <BooleanToVisibilityConverter x:Key="VisibilityConverter" />
       </Page.Resources>
-      <StackPanel>
-            <TextBlock Visibility="{Binding CandlesState.IsLoading, Converter={StaticResource VisibilityConverter}}" 
-                       Text="Loading..."/>
-            <TextBlock Visibility="{Binding CandlesState.IsError, Converter={StaticResource VisibilityConverter}}"
-                       Text="{Binding CandlesState.ErrorMessage}"/>
-            <ui:PriceChart Visibility="{Binding CandlesState.IsLoaded, Converter={StaticResource VisibilityConverter}}"
-                Candles="{Binding Candles}"/>
-      </StackPanel>
+      <Grid>
+          <Grid.RowDefinitions>
+              <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+          </Grid.RowDefinitions>
+          <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="2*" />
+              <ColumnDefinition Width="1*" />
+          </Grid.ColumnDefinitions>
+          
+          <!-- Currency Details -->
+          <StackPanel Grid.Row="0" Grid.Column="0">
+                  <TextBlock Visibility="{Binding CurrencyState.IsLoading, Converter={StaticResource VisibilityConverter}}" 
+                             Text="Loading..."/>
+                  <TextBlock Visibility="{Binding CurrencyState.IsError, Converter={StaticResource VisibilityConverter}}"
+                             Text="{Binding CurrencyState.ErrorMessage}"/>
+                  <ui:CurrencyItem Visibility="{Binding CurrencyState.IsLoaded, Converter={StaticResource VisibilityConverter}}"
+                                   CryptoCurrency="{Binding Currency}"/>
+                  
+          </StackPanel>
+          
+          <!-- Markets -->
+          <StackPanel Grid.Row="0" Grid.Column="1" Margin="10">
+              <TextBlock Text="Markets to buy:"/>
+              <ItemsControl ItemsSource="{Binding Markets}">
+                  <ItemsControl.ItemTemplate>
+                      <DataTemplate>
+                          <TextBlock Text="{Binding}" />
+                      </DataTemplate>
+                  </ItemsControl.ItemTemplate>
+              </ItemsControl>
+          </StackPanel>
+          
+          <!-- Price Chart -->
+          <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" >
+              <TextBlock Visibility="{Binding CandlesState.IsLoading, Converter={StaticResource VisibilityConverter}}" 
+                         Text="Loading..."/>
+              <TextBlock Visibility="{Binding CandlesState.IsError, Converter={StaticResource VisibilityConverter}}"
+                         Text="{Binding CandlesState.ErrorMessage}"/>
+              <Grid Visibility="{Binding CandlesState.IsLoaded, Converter={StaticResource VisibilityConverter}}">
+                  <ui:PriceChart Candles="{Binding Candles}"/>
+              </Grid>
+          </StackPanel>
+      </Grid>
 </Page>
