--- a/CryptoApp.Wpf/CurrencyDetails/CurrencyDetailsPage.xaml
+++ b/CryptoApp.Wpf/CurrencyDetails/CurrencyDetailsPage.xaml
@@ -52,14 +52,19 @@
           </StackPanel>
           
           <!-- Price Chart -->
-          <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" >
-              <TextBlock Visibility="{Binding CandlesState.IsLoading, Converter={StaticResource VisibilityConverter}}" 
-                         Text="Loading..."/>
-              <TextBlock Visibility="{Binding CandlesState.IsError, Converter={StaticResource VisibilityConverter}}"
-                         Text="{Binding CandlesState.ErrorMessage}"/>
-              <Grid Visibility="{Binding CandlesState.IsLoaded, Converter={StaticResource VisibilityConverter}}">
-                  <ui:PriceChart Candles="{Binding Candles}"/>
-              </Grid>
+          <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+              <TextBlock Text="Chart:" FontWeight="Bold"/>
+              <StackPanel  Margin="10" >
+                  <TextBlock Visibility="{Binding CandlesState.IsLoading, Converter={StaticResource VisibilityConverter}}" 
+                             Text="Loading..."/>
+                  <TextBlock Visibility="{Binding CandlesState.IsError, Converter={StaticResource VisibilityConverter}}"
+                             Text="{Binding CandlesState.ErrorMessage}"/>
+                  <StackPanel Visibility="{Binding CandlesState.IsLoaded, Converter={StaticResource VisibilityConverter}}"
+                              HorizontalAlignment="Center">
+                  
+                      <ui:PriceChart Candles="{Binding Candles}"/>
+                  </StackPanel>
+              </StackPanel>
           </StackPanel>
       </Grid>
 </Page>
